2003-11-03  Ulrich Drepper  <drepper@redhat.com>

	* intl/locale.alias: nb_NO is now the correct name, not no_NO.

	* locale/iso-639.def: Add Blin.
	Patch by Daniel Yacob <locales@geez.org>.

2003-10-31  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/powerpc/powerpc32/strncmp.S: New File.
	* sysdeps/powerpc/powerpc64/strncmp.S: New File.

2003-11-01  Randolph Chung  <tausq@debian.org>

	* sysdeps/unix/sysv/linux/hppa/sysdep.h (LOAD_ARGS_0, LOAD_ARGS_1,
	LOAD_ARGS_2, LOAD_ARGS_3, LOAD_ARGS_4, LOAD_ARGS_5, LOAD_ARGS_6):
	Add missing parentheses.

2003-11-01  Roland McGrath  <roland@redhat.com>

	* libio/bug-ftell.c (do_test): Add a cast.

2003-09-26  Daniel Jacobowitz  <drow@mvista.com>

	* Makerules (shlib.lds): Make sure that ld doesn't try to link
	anything while generating the linker script.

2003-10-31  Roland McGrath  <roland@redhat.com>

	* locale/lc-ctype.c (_nl_postload_ctype): Update _nl_global_locale's
	special members.

2003-10-29  Ulrich Drepper  <drepper@redhat.com>

	* po/be.po: Update from translation team.

2003-10-27  Ulrich Drepper  <drepper@redhat.com>

	* elf/rtld.c (map_doit): Pass __RTLD_OPENEXEC in last parameter to
	_dl_map_object.

	* elf/sprof.c (load_shobj): Use l_map_start not l_addr to locate
	ELF header.

	* inet/rcmd.c (__validuser2_sa): Remove unnecessary code to skip
	rest of line.  We use getline which means this cannot happen.

2003-10-26  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/internal_statvfs.c (__internal_statvfs):
	Avoid infinite loops in case the mounts file is hosed.
	* io/Makefile: Add rules to build and run tst-statvfs.
	* io/tst-statvfs.c: New file.

	* include/dlfcn.h (__RTLD_OPENEXEC): Define.
	* elf/dl-load.c (_dl_map_object_from_fd): Don't allow loading
	executables unless __RTLD_OPENEXEC flag is present.
	* elf/rtld.c (dl_main): Pass __RTLD_OPENEXEC flag to
	_dl_map_object when loading the executable.

	* sysdeps/generic/glob.c (glob): Handle GLOB_BRACE and escaping
	correctly.